# fintech-llm-veille

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: streamlit_app.py
dags/: daily_pipeline.py
dashboards/: .gitkeep
notebooks/: 01_exploration_donnees.ipynb  02_analyse_sentiment.ipynb
screenshots/: .gitkeep  README.md
scripts/: collect_initial_data.py
src/: __init__.py  config.py
src/agent/: chromadb_index.py  prompts.py  rag_chain.py  signal_engine.py
src/api/: main.py
src/api/routers/: agent.py  analysis.py  prices.py
src/collectors/: alpha_vantage.py  newsapi.py  sec_edgar.py  yahoo_finance.py
src/models/: database.py  schemas.py
src/pipeline/: cleaner.py  deduplication.py  ingestion.py
tests/: test_agent.py  test_collectors.py  test_pipeline.py
