[project]
name = "fintech-llm-veille"
version = "0.1.0"
description = "Plateforme de veille financière augmentée par LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Collecte de données
    "yfinance>=0.2.40",
    "newsapi-python>=0.2.7",
    "requests>=2.32.3",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "pdfplumber>=0.11.0",
    # Stockage
    "sqlalchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "alembic>=1.13.1",
    "chromadb>=0.5.0",
    # Agent IA & LLM
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-community>=0.2.0",
    "langchain-chroma>=0.1.0",
    "google-generativeai>=0.7.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Visualisation
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "pandas>=2.2.2",
    # Logging & utilitaires
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "tenacity>=8.3.0",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
